# porto-stcp-realtime

./: .gitignore  AGENTS.md  Dockerfile  README.md  deployment.yml  fly.toml  litefs.yml  main.ts  package-lock.json  types.ts
.github/workflows/: deploy_lamda.yml  deploy_layer.yml
analysis/: create_analysis_table.sql  last_times.sql  pyproject.toml  routes.json
dbt_porto_transports/: dbt_project.yml  pyproject.toml
dbt_porto_transports/data/Athena/: create_database.sql  iceberg_table.sql  porto_raw.sql  spark.py
dbt_porto_transports/migrations/: compaction.py
dbt_porto_transports/models/: canceled_trips.sql  last_times.sql  routes_raw.sql  trip_stops.sql  trip_stops_raw.sql
dbt_porto_transports/models/iceberg/: trip_stops_raw_iceberg.sql
dbt_porto_transports/models/parquet/: april.sql  canceled_trips.sql  canceled_trips_agg.sql  canceled_trips_daily_agg.sql  create_analysis_table.sql  december.sql  last_times.sql  may.sql  november.sql  single_trip_stops_raw.sql  stops.sql  stops_raw.sql  trip_stops.sql  trip_stops_raw.sql
dbt_porto_transports/models/sqlite/: stop_realtime_sqlite.sql
dbt_porto_transports/reports/: .tool-versions  README.md  evidence.plugins.yaml  package-lock.json  package.json
dbt_porto_transports/reports/.evidence/customization/: .profile.json
dbt_porto_transports/reports/data/: stops.json
dbt_porto_transports/reports/pages/: cancellations.md  delays.md  index.md  realtime.md  workbench.md
dbt_porto_transports/reports/sources/analysis/: canceled_trips.sql  canceled_trips_agg.sql  canceled_trips_daily_agg.sql  connection.yaml  last_times.sql  stops.sql  trip_stops.sql
dbt_porto_transports/scripts/: s3_move_files.py
deno_loader/: main.ts  types.ts
loader/: .pyiceberg.yaml  Dockerfile  README.md  docker-compose.yml  lambda_function.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
loader/loader/: iceberg.py
presentation/: duckdb_with_stcp.md
scripts/: deploy_lambda.sh  deploy_layer.sh
