[tool.poetry]
name = "dbt-porto-transports"
version = "0.1.0"
description = ""
authors = ["José Cabeda <jose.cabeda@fidel.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-duckdb = "^1.7.0"
boto3 = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
