[tool.poetry]
name = "dbtportotransports"
version = "0.1.0"
description = ""
authors = ["José Cabeda <jose.cabeda@fidel.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-duckdb = "1.8.0"
duckdb = "0.10"
boto3 = "^1.34.113"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[project]
name="dbtportotransports"
version="0.1.0"
