[tool.poetry]
name = "loader"
version = "0.1.0"
description = ""
authors = ["José Cabeda <jose.cabeda@fidel.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pyiceberg = {extras = ["glue", "hive", "s3fs"], version = "^0.5.0"}
requests = "^2.31.0"
numpy = "^1.26.0"
pyarrow = "^13.0.0"
pandas = "^2.1.1"
pyspark = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
