[tool.poetry]
name = "loader"
version = "0.1.0"
description = ""
authors = ["José Cabeda <jose.cabeda@fidel.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
pyarrow = "^14.0.1"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.67"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
